--- a/tasks/install-RedHat.yml
+++ b/tasks/install-RedHat.yml
@@ -25,7 +25,7 @@
     - delete ib_logfiles
 
 - name: Starting mariadb
-  service:
+  systemd:
     name: mysql
     state: started
     enabled: yes
