--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -3,3 +3,4 @@ __mariadb_daemon: mysql
 
 mariadb_config_file: /etc/mysql/my.cnf
 mariadb_socket: /var/run/mysqld/mysqld.sock
+mysql_pid_file: /var/run/mysqld/mysqld.pid
