--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,5 +1,6 @@
 ---
-__mariadb_daemon: mysql
+__mariadb_daemon: mariadb
 
 mariadb_config_file: /etc/my.cnf.d/server.cnf
 mariadb_socket: /var/lib/mysql/mysql.sock
+mysql_pid_file: /var/lib/mysql/mysqld.pid
