--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -18,8 +18,9 @@
     mode: 0644
   when: mysql_slow_query_log_enabled
 
-- name: Ensure MySQL is started and enabled on boot
+- name: Start MySQL daemon
   systemd:
     name: "{{ mariadb_deamon }}"
     state: started
+    daemon_reload: yes
     enabled: yes
