--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,5 +1,5 @@
 ---
-__mariadb_daemon: mariadb
+__mariadb_daemon: mysql
 
 mariadb_config_file: /etc/my.cnf.d/server.cnf
 mariadb_socket: /var/lib/mysql/mysql.sock
