--- a/tasks/secure_installation.yml
+++ b/tasks/secure_installation.yml
@@ -1,7 +1,7 @@
 ---
 - name: Get list of hosts for the root user.
   command: mysql -NBe 'SELECT Host FROM mysql.user WHERE User = "root" ORDER BY (Host="localhost") ASC'
-  register: mysql_root_hosts
+  register: mariadb_root_hosts
   changed_when: false
 
 - name: Update MySQL root password for localhost root account.
@@ -9,7 +9,7 @@
     name: "root"
     host: "{{ item }}"
     password: "{{ mariadb_root_password }}"
-  with_items: "{{ mysql_root_hosts.stdout_lines }}"
+  with_items: "{{ mariadb_root_hosts.stdout_lines }}"
 
 - name: Copy .my.cnf file with root password credentials.
   template:
